Fixing API header overflow

--- a/src/css/views/api.styl
+++ b/src/css/views/api.styl
@@ -29,11 +29,13 @@ html {
 	left: 0 !important;
 	top: 0 !important;
 	width: 100% !important;
+	overflow: hidden;
 }
 
 .nav {
 	position:relative;
 	height: $navHeight;
+	overflow: hidden;
 	.menu .menuItems li a {
 		font-size: 1rem;
 	}
