--- a/src/css/views/home.styl
+++ b/src/css/views/home.styl
@@ -13,9 +13,22 @@ $tutorialsHoverBg = mix($guideHoverBg, $apiHoverBg);
 	.nav {
 		background:#fff;
 		color: $baseColor;
+		transition: background 0.3s;
 
 		&.shrink {
+			background: $navBg;
 			box-shadow: $navShadow;
+
+			.menuItems {
+				li {
+					a {
+						color: $navTextColor;
+					}
+				}
+			}
+			.navLogo {
+				color: $navTextColor;
+			}
 		}
 
 		.navLogo {
